# EcoScan

./: .gitignore  ABOUT.md  DEMO_SCRIPT.md  DEMO_STRATEGY.md  README.md  RESTORATION_COMPLETE.md  SESSION_SUMMARY_APR19.md  UPLOAD_SYSTEM_GUIDE.md  codexsecondbrain-sync-2026-04-18.md  codexsecondbrain-sync-paste-2026-04-18-1648.md  codexsecondbrain-sync-paste-2026-04-18-2149.md  codexsecondbrain-sync-paste-2026-04-23-0949.md  package-lock.json  pyproject.toml  run-desktop.sh  run.sh  stop.sh
.playwright-mcp/: page-2026-04-21T04-36-32-710Z.yml
data/model_manifests/: target_taxa_detector.example.json
data/sample_inputs/: habitats.csv  map.json  sensors.csv
data/validation/: species_detector_validation.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: animated-hero.tsx  card.tsx  carousel.tsx  container-scroll-animation.tsx  expand-map.tsx  file-upload-1.tsx  gallery4.tsx  halide-topo-hero.tsx  horizon-hero-section.tsx  input.tsx  navigation-menu.tsx  scroll-expansion-hero.tsx  select.tsx  shadcnblocks-com-navbar1.tsx  sheet.tsx  sketchpad-dropzone.tsx  species-card.tsx
frontend/src/lib/: animations.ts
frontend/src/types/: ecoscan.ts
src/ecoscan/: __init__.py  api.py  calibration.py  cli.py  dataio.py  demo.py  desktop.py  fusion.py  jobs.py  models.py  pipeline.py  reports.py  scanio.py  server.py  vision.py
src/ecoscan/static/: app.js  index.html  styles.css
src/ecoscan/static/assets/: index-B6tX5VbO.js  index-I03ufRLL.css
tests/: test_jobs_and_reports.py  test_pipeline.py  test_visual_ingest.py
