[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ecoscan"
version = "0.1.0"
description = "Satellite imagery + sensor fusion for spatial environmental zone modeling"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Rushil" }
]
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
]
ml = [
  "numpy>=2.0.0",
  "torch>=2.8.0",
  "torchvision>=0.23.0",
  "transformers>=4.57.0",
  "scikit-learn>=1.6.0",
  "trimesh>=4.11.0",
  "laspy>=2.6.0",
  "lazrs>=0.8.0",
  "pyproj>=3.6.0",
]
full = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "numpy>=2.0.0",
  "torch>=2.8.0",
  "torchvision>=0.23.0",
  "transformers>=4.57.0",
  "scikit-learn>=1.6.0",
  "trimesh>=4.11.0",
  "laspy>=2.6.0",
  "lazrs>=0.8.0",
  "pyproj>=3.6.0",
]

[project.scripts]
ecoscan = "ecoscan.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
