[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ecoscan"
version = "0.1.0"
description = "Satellite imagery + sensor fusion for spatial environmental zone modeling"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Rushil" }
]
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
ecoscan = "ecoscan.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

